--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -105,3 +105,8 @@ body {
 
 .border-top { border-top: 1px solid #e5e5e5; }
 .border-bottom { border-bottom: 1px solid #e5e5e5; }
+
+.top-admin-link a {
+    display: inline;
+    margin-right: 7px;
+}
